Make table cells closer to correct height
Tables can expand depending on content so not exactly right (and a few
pixels smaller as it ended up looking too tall for some reason.

Can’t use height as that increases the padding and thus breaks the
dotted border. Not sure why when the padding is explicitly called out
as 8px, but must be a table thing.

--- a/style/styles.css
+++ b/style/styles.css
@@ -330,7 +330,7 @@ td {
 
 	padding: 8px 0;
 	font-size: .9em;
-	line-height: 1.5;
+	line-height: 38px;
 	text-indent: 12px;
 }
 
@@ -368,7 +368,6 @@ th[scope="row"] code {
 [title="n/a"],
 [title="partial"] {
 	max-width: 60px;
-	height: 44px;
 	overflow: hidden;
 	text-indent: 100%;
 	white-space: nowrap;
